# GameEngCw

./: CIbuild.txt  CMakeLists.txt  README.md  appveyor.yml  cmp_block_manager.cpp  cmp_block_manager.h
2_invaders/: bullet.cpp  bullet.h  ship.cpp  ship.h  spaceinv.cpp  spaceinv.h
Documentation/: Dig It - Game Design Document.docx  Dig It - Game Pitch.pptx
coursework/: main.cpp
engine/lib_ecm/: ecm.cpp  ecm.h
engine/lib_maths/: maths.h
engine/lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
engine/src/: engine.cpp  engine.h  system_physics.cpp  system_physics.h  system_renderer.h  system_resources.cpp  system_resources.h
lib_ecm/: ecm.cpp  ecm.h
lib_maths/: maths.h
lib_tile_level_loader/: levelsystem.cpp  levelsystem.h
maze/: entity.cpp  entity.h  main.cpp  player.cpp  player.h
pacman/: Entity.cpp  Entity.h  Game.h  Ghost.cpp  Ghost.h  Player.cpp  Player.h  cmp_actor_movement.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_sprite.cpp  main.cpp  pacman.cpp  pacman.h
project/: buttons_manager.cpp  buttons_manager.h  cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_block_manager.cpp  cmp_block_manager.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_pickup.cpp  cmp_pickup.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_sprite.cpp  cmp_sprite.h  cmp_text.h  cmp_tile.cpp  cmp_tile.h  digit.cpp  digit.h  enemy_spawner.cpp  enemy_spawner.h  game.h  game_over.cpp  game_over.h  inputs.cpp  inputs.h  main.cpp  main_menu_scene.cpp  main_menu_scene.h  option_scene.cpp  option_scene.h  pathfinder.cpp  pathfinder.h  preabs_manager.h  prefab_manager.cpp  prefabs_manager.cpp  prefabs_manager.h  scene.cpp  scene.h  single_player_scene.cpp  (+11 more)
project/components/: cmp_actor_movement.cpp  cmp_actor_movement.h  cmp_enemy_ai.cpp  cmp_enemy_ai.h  cmp_ghost.cpp  cmp_ghost.h  cmp_pathfind.cpp  cmp_pathfind.h  cmp_physics.cpp  cmp_physics.h  cmp_pickaxe.cpp  cmp_pickaxe.h  cmp_pickup.h  cmp_player_movement.cpp  cmp_player_movement.h  cmp_seek.cpp  cmp_seek.h  cmp_sprite.cpp  cmp_sprite.h  cmp_steering.h  cmp_text.cpp  cmp_tile.cpp  cmp_tile.h  cmp_treasure.cpp  cmp_treasure.h
res/maps/: map0.txt  map1.txt  maze_2.txt  pacman.txt
